--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="googlec3c6545804b1bb7d" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>덕원예고 내신 점수 산출 계산기 (과목별 입력)</title>
     <script src="https://cdn.tailwindcss.com"></script>
